--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
+    "eslint": "^5.16.0",
     "express": "^4.15.2",
     "path": "^0.12.7",
     "pg": "^7.4.3",
